--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,12 +17,14 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components {
+  .custom-input {
+    
+    @apply border-2 border-gray-300 rounded-md focus:outline-none focus:border-blue-500 px-1 py-1;
+      
+  }
+  .input-cont {
+    @apply flex justify-between flex-col md:flex-row gap-2 items-center;
+  }
 }
+
