--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -17,6 +17,33 @@
   }
 }
 
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0)
+  }
+}
+
+.animate-slide-in {
+  animation: slideInFromLeft 1s ease forwards;
+  animation-delay: 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
 @layer components {
   .custom-input {
     
@@ -26,5 +53,11 @@
   .input-cont {
     @apply flex justify-between flex-col md:flex-row gap-2 items-center;
   }
+
+  .overlay {
+    @apply z-0 absolute top-0 left-0 w-full h-full bg-black opacity-50;
+  }
+
+  
 }
 
