--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -7,6 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --hoverC: #94a3b8;
+  --selectedBg: #444753de;
   
 }
 
@@ -50,6 +51,10 @@
 .userUi:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+
+.selected-top {
+  border-color: var(--selectedBg);
 }
 
 
