--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -22,15 +22,18 @@
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
+    /* opacity: 100%; */
   }
   100% {
-    transform: translateX(0)
+    transform: translateX(0);
+    /* opacity: 100%; */
   }
 }
 
 .animate-slide-in {
   animation: slideInFromLeft 1s ease forwards;
-  animation-delay: 1s;
+  /* animation-delay: 1s; */
+  /* opacity: 0; */
 }
 
 .hover-p:hover {
