--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -43,6 +43,13 @@
   
 }
 
+body {
+  background-color: #292929;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(68,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%233761FF'/%3E%3Cstop offset='1' stop-color='%23FF32B5'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(158,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%2347AEFF'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='6.93'%3E%3Cpath transform='translate(-167.65 12) rotate(0.4499999999999993 1409 581) scale(0.9251429999999999)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='2.3100000000000005' transform='translate(-194.5 124) rotate(13.700000000000001 800 450) scale(1.0151029999999999)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(36.4 -160.5) rotate(113.5 401 736) scale(1.0151029999999999)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='2.1'%3E%3Cpath transform='translate(744 -2.6000000000000014) rotate(0.6500000000000004 150 345) scale(0.9663809999999999)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='4.620000000000001' transform='translate(-237.5 -333.5) rotate(108 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-480.8 135.2) rotate(18.000000000000004 1400 132) scale(0.765)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
+}
+
 .portrait-img {
   max-height: 32px;
 }
